@@ -1,5 +1,9 @@
 Revision history for Data::Validation
 
+          - Dropped dependency on Regexp::Common
+            That module has had installation and indexing problems for
+            some time 249f54a8-b08e-11e5-9304-6ec2af845ad4 and RT#110771
+
 0.23.1    2016-01-01 11:08:17
           - Added List::Util as a dependency
             Even newish versions of Perl ship with too old copies
